--- a/assignment19.html
+++ b/assignment19.html
@@ -8,36 +8,36 @@
 		{
 			case "1":
 			
-				document.write("Day is :Sunday");
+				document.write("You are entered "+days+"<br><br> Day is :Sunday");
 				break;
 			
 			case "2":
 			
-				document.write("Day is :Monday");
+				document.write("You are entered "+days+"<br><br> Day is :Monday");
 				break;
 			
 			case "3":
 			
-				document.write("Day is :Tuesday");
+				document.write("You are entered "+days+"<br><br> Day is :Tuesday");
 				break;
 			
 			case "4":
 			
-				document.write("Day is :Wednesday");
+				document.write("You are entered "+days+"<br><br> Day is :Wednesday");
 				break;
 			
 			case "5":
 			
-				document.write("Day is :Thursday");
+				document.write("You are entered "+days+"<br><br> Day is :Thursday");
 				break;
 			
 			case "6":
 			
-				document.write("Day is :Friday");
+				document.write("You are entered "+days+"<br><br> Day is :Friday");
 				break;
 
 			case "7":
-			     document.write("Day is:Saturday");
+			     document.write("You are entered "+days+"<br><br> Day is:Saturday");
 			     break;
 			     default:
 			     document.write("invalid Number");
@@ -46,6 +46,5 @@
 	</script>
 </head>
 <body>
-
 </body>
 </html>
